deployments/service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    kind.service: server
spec:
  ports:
  - name: 9080-9080
    nodePort: 30980
    port: 9080
    protocol: TCP
    targetPort: 9080
  type: NodePort
  selector:
    kind.service: server
