deployments/ingress-server.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /server
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 9080
